finished bootstrap with applied theme.

--- a/comingsoon.html
+++ b/comingsoon.html
@@ -8,6 +8,7 @@
 
   <!-- Bootstrap CDN -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://bootswatch.com/slate/bootstrap.css">
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 <body>
@@ -15,7 +16,7 @@
   <nav class="navbar navbar-default">
     <div class="container">
       <div class="navbar-header">
-        <a class="navbar-brand" href="#">Jason O'Brien</a>
+        <a class="navbar-brand" href="index.html">Jason O'Brien</a>
       </div>
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav navbar-right">
@@ -29,7 +30,7 @@
 
   <div class="container">
     <div class="row">
-      <div class="col-md-8" style="border:1px solid #ccc;">
+      <div class="col-md-8 greyBack" style="border:1px solid #ccc;">
         <div class="page-header">
 			<h2>Coming Soon!</h2>
 			<br>
@@ -48,14 +49,14 @@
 
           <div class="panel-body connect">
             <div class="row">
-              <div class="col-sm-4">
-                <a href="http://stackoverflow.com/users/7370308/jason"><img class="img-responsive" src="assets/images/stacked.png" alt="Stack Overflow"></a>
+              <div class="col-sm-4">  
+                <a href="https://github.com/jasonboru"><img class="img-responsive" src="assets/images/github.png" alt="GitHub"></a>
               </div>
               <div class="col-sm-4"> 
                 <a href="https://www.linkedin.com/in/jason-obrien-462630133"><img class="img-responsive" src="assets/images/linkedin.png" alt="LinkedIn"></a>
               </div>
-              <div class="col-sm-4">  
-                <a href="https://github.com/jasonboru"><img class="img-responsive" src="assets/images/github.png" alt="GitHub"></a>
+              <div class="col-sm-4">
+                <a href="http://stackoverflow.com/users/7370308/jason"><img class="img-responsive" src="assets/images/stacked.png" alt="Stack Overflow"></a>
               </div>
             </div>
             <!--closes row in panel body-->    
@@ -71,10 +72,10 @@
   <!--closes main container-->
 	</section>
 
-	<footer class="group">
-		<div class="foot">
-			<p>&#169; Copyright 2017 Jason O'Brien</p>
-		</div>
+  <footer class="footer">
+    <div class="container text-center vcenter">
+		  <p class="text-muted">&#169; Copyright 2017 Jason O'Brien</p>
+    </div>  
 	</footer>
 
 </body>
