--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
   <!-- Bootstrap CDN -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://bootswatch.com/slate/bootstrap.css">
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
 </head>
@@ -19,7 +20,7 @@
   <nav class="navbar navbar-default">
     <div class="container">
       <div class="navbar-header">
-        <a class="navbar-brand" href="#">Jason O'Brien</a>
+        <a class="navbar-brand" href="index.html">Jason O'Brien</a>
       </div>
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav navbar-right">
@@ -33,7 +34,7 @@
 
   <div class="container">
     <div class="row">
-      <div class="col-md-8" style="border:1px solid #ccc;">
+      <div class="col-md-8 greyBack" style="border:1px solid #ccc;">
         <div class="page-header">
           <h1>About Me</h1>
         </div>
@@ -55,33 +56,45 @@
       </div>
 
       <div class="col-md-4">
+      <!--main column right-->
+
         <div class="panel panel-default">
+        <!--sidebar panel right-->
           <div class="panel-heading">
             <h3 class="panel-title">Connect with Me</h3>
           </div>
+
           <div class="panel-body connect">
             <div class="row">
-        	    <div class="col-sm-4">
-				        <a href="http://stackoverflow.com/users/7370308/jason"><img class="img-responsive" src="assets/images/stacked.png" alt="Stack Overflow"></a>
+              <div class="col-sm-4">  
+                <a href="https://github.com/jasonboru"><img class="img-responsive" src="assets/images/github.png" alt="GitHub"></a>
               </div>
               <div class="col-sm-4"> 
-				        <a href="https://www.linkedin.com/in/jason-obrien-462630133"><img class="img-responsive" src="assets/images/linkedin.png" alt="LinkedIn"></a>
+                <a href="https://www.linkedin.com/in/jason-obrien-462630133"><img class="img-responsive" src="assets/images/linkedin.png" alt="LinkedIn"></a>
               </div>
-              <div class="col-sm-4">  
-				        <a href="https://github.com/jasonboru"><img class="img-responsive" src="assets/images/github.png" alt="GitHub"></a>
+              <div class="col-sm-4">
+                <a href="http://stackoverflow.com/users/7370308/jason"><img class="img-responsive" src="assets/images/stacked.png" alt="Stack Overflow"></a>
               </div>
-            </div>    
+            </div>
+            <!--closes row in panel body-->    
 			    </div>
+          <!--closes panel body-->
         </div>
+        <!--closes sidebar panel right-->
       </div>
+      <!--closes main column right-->
     </div>
+    <!--closes main row-->
   </div>
+  <!--closes main container-->
 
-  <footer class="group">
-	<div class="foot">
-	  <p>&#169; Copyright 2017 Jason O'Brien</p>
-	</div>
-  </footer>
+  <footer class="footer">
+    <div class="container text-center vcenter">
+		  <p class="text-muted">&#169; Copyright 2017 Jason O'Brien</p>
+    </div>  
+	</footer>
+
+
 
   <!-- jQuery CDN -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
